[project]
name = "instacheck"
version = "0.1.0"
description = ""
authors = [
    {name = "Herbert Souto",email = "herbert-93@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instaloader (>=4.14.1,<5.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
